test_programs/compile_failure/noirc_frontend_tests_disallows_export_attribute_on_impl_method/src/main.nr

        pub struct Foo { }

        impl Foo {
            #[export]
            fn foo() { }
        }

        fn main() { }
    